Added a cat image and few more changes

--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test Page</title>
+<body>
 <h1>Hello World</h1>
-<p>Hey, I'am a paragraph element</p>
+<p>Hey, I'am a <b>paragraph</b> element</p>
 <a href="https://google.com" target="_blank" title="Let's go to Google">Hey. Click me I am a link</a>
+<p>My name is <br>
+	Kitty Kat</p>
+<img src="img/cat.jpeg">
+</body>
+</html>
