added fat heading

--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
 	<title>Test Page</title>
 <body>
 <h1>Hello World</h1>
+<h1>I am big fat heading</h1>
 <p>Hey, I'am a <b>paragraph</b> element</p>
 <a href="https://google.com" target="_blank" title="Let's go to Google">Hey. Click me I am a link</a>
 <p>My name is <br>
